Fix the wrapping of homepage buttons on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -15,6 +15,7 @@
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
